[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robofontExtensionBundle"
dynamic = ["version"]

requires-python = "<= 3.9.13"
authors = [
  {name = "Frederik Berlaen", email = "frederik@typemytype.com"},
  {name = "Roberto Arista", email = "arista.rob@gmail.com"},
]
readme = "README.md"

dependencies = [
  "markdown",
  "typing-extensions",
  "packaging",
]

[project.optional-dependencies]
dev = [
  "pyyaml",
  "pytest",
]

[tool.setuptools]
packages = [ "robofontExtensionBundle" ]
package-dir.robofontExtensionBundle = "lib"
