[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robofontExtensionBundle"
dynamic = ["version"]

requires-python = "<= 3.9.13"
authors = [
  {name = "Frederik Berlaen", email = "frederik@typemytype.com"},
  {name = "Roberto Arista", email = "arista.rob@gmail.com"},
]
readme = "README.md"

dependencies = [
  "markdown",
  "typing-extensions",
  "packaging",
  "pyyaml",
  "click"
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
pack_extension = "robofontExtensionBundle.bundle:ExtensionBundle.pack"

[tool.setuptools]
packages = [ "robofontExtensionBundle" ]
package-dir.robofontExtensionBundle = "lib"