[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roboFontExtensionBundle"
dynamic = ["version"]

requires-python = ">= 3.9"
authors = [
  {name = "Frederik Berlaen", email = "frederik@typemytype.com"},
  {name = "Roberto Arista", email = "arista.rob@gmail.com"},
]
readme = "README.md"

dependencies = [
  "markdown",
  "typing-extensions",
  "packaging",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
pack_extension = "roboFontExtensionBundle.pack:main"

[tool.setuptools]
packages = [ "roboFontExtensionBundle" ]
package-dir.robofontExtensionBundle = "Lib"
